[gd_scene load_steps=10 format=3 uid="uid://cfntadpqlnjlw"]

[ext_resource type="Script" uid="uid://2w2id5bawy13" path="res://Scripts/enemy.gd" id="1_bh6ka"]
[ext_resource type="Texture2D" uid="uid://bbjt108i3yhxu" path="res://Enemies/Unknown/Unknown_Idle_180x180.png" id="2_w5m6y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3tdw7"]
atlas = ExtResource("2_w5m6y")
region = Rect2(0, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6n4n"]
atlas = ExtResource("2_w5m6y")
region = Rect2(180, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvooa"]
atlas = ExtResource("2_w5m6y")
region = Rect2(360, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg1ck"]
atlas = ExtResource("2_w5m6y")
region = Rect2(540, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_da7r8"]
atlas = ExtResource("2_w5m6y")
region = Rect2(720, 0, 180, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_c1gwg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tdw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6n4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvooa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg1ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da7r8")
}],
"loop": true,
"name": &"new_animation",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mldi7"]
radius = 16.0
height = 56.0

[node name="Goldfish_base" type="Node2D"]
script = ExtResource("1_bh6ka")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -37)
sprite_frames = SubResource("SpriteFrames_c1gwg")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.327591

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotator" type="Node2D" parent="."]
position = Vector2(0, -20)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -27)
shape = SubResource("CapsuleShape2D_mldi7")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
